Modify README.md with commands thats can be used for execution.